Project structure improvements + lazyload fix

--- a/src/app/shared/components/main-container/main-container.component.html
+++ b/src/app/shared/components/main-container/main-container.component.html
@@ -1,5 +1,5 @@
 <div class="center-wrapper">
   <mat-card class="main-container">
-    <ng-content></ng-content>
+    <router-outlet></router-outlet>
   </mat-card>
 </div>
