--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #f6efff;}
-.text-center{text-align: center;}
+.text-center{text-align: center;}.text-right{text-align: right;}
 .full-width {width: 100%;}
 .container {
   max-width: 1140px;
