--- a/src/app/shared/components/main-container/main-container.component.scss
+++ b/src/app/shared/components/main-container/main-container.component.scss
@@ -1,7 +1,8 @@
 .main-container {
   width: 100%;
-  max-width: 900px;
-  min-height: 90vh;
+  max-width: 1000px;
+  min-height: 80vh;
 
-  padding: 20px 20px;
+  padding: 20px 50px;
+  margin-top: 80px;
 }
