--- a/src/app/features/store/modules/friends/pages/friends-list/friends-list.component.html
+++ b/src/app/features/store/modules/friends/pages/friends-list/friends-list.component.html
@@ -6,15 +6,22 @@
     <span>Find new friends</span>
   </a>
 </app-page-header>
-<app-search-form (onFormSubmit)="filterFriends($event)"></app-search-form>
-<h2>My friends</h2>
-<div *ngFor="let friend of friends">
-  <app-friend>
-    <div>{{friend.username}}</div>
-    <button 
-      mat-flat-button 
-      color="warn"
-      (click)="removeFriend(friend)"
-    >Remove friend</button>
-  </app-friend>
+<app-invites-list
+  (onInviteAccept)="acceptInvite($event)"
+></app-invites-list>
+<div *ngIf="{friends: friends$ | async, loading: loading$ | async} as observables">
+  <div *ngIf="!observables.loading">
+    <h2>My friends({{observables.friends?.length}})</h2>
+    <app-list-item *ngFor="let friend of observables.friends">
+      <div>{{friend.username}}</div>
+      <button 
+        mat-flat-button 
+        color="warn"
+        (click)="removeFriend(friend)"
+      >Remove friend</button>
+    </app-list-item>
+    <app-list-item *ngIf="!observables.friends?.length">
+      <div>You have no friends</div>
+    </app-list-item>
+  </div>
 </div>
