--- a/src/app/shared/components/main-container/main-container.component.html
+++ b/src/app/shared/components/main-container/main-container.component.html
@@ -1,4 +1,4 @@
-<div class="center-wrapper">
+<div class="container">
   <mat-card class="main-container">
     <router-outlet
       (activate)="toggleLoadingStatus(false)"
