--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,15 +1,12 @@
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 10;
-
-  width: 100%;
+  background: #673ab7;
 
   &__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    background: none;
   }
 }
 .nav-link {
@@ -18,7 +15,7 @@
   margin-right: 15px;
   
   text-decoration: none;
-  color: #f0f8ffea;
+  color: #f0f8ffb9;
 
   &:hover {
     color: #fff;
