--- a/src/app/shared/components/fullscreen-spinner/fullscreen-spinner.component.scss
+++ b/src/app/shared/components/fullscreen-spinner/fullscreen-spinner.component.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   background-color: #ffffffc9;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 }
