--- a/src/app/shared/components/main-container/main-container.component.scss
+++ b/src/app/shared/components/main-container/main-container.component.scss
@@ -1,8 +1,6 @@
 .main-container {
-  width: 100%;
-  max-width: 1000px;
-  min-height: 80vh;
+  min-height: 75vh;
 
-  padding: 20px 50px;
-  margin-top: 80px;
+  padding: 20px 30px 40px;
+  margin: 30px 0px;
 }
