--- a/src/app/features/store/modules/games/pages/main/main.component.html
+++ b/src/app/features/store/modules/games/pages/main/main.component.html
@@ -29,6 +29,8 @@
       [name]="game.name"
       [price]="game.price.val + ' ' + game.price.currency"
       [description]="game.description"
+      [tags]="game.tags"
+      [img]="game.img"
     >
       <button 
         mat-flat-button 
