--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
   display: flex;
   justify-content: space-between;
 }
+.btn-icon {
+  margin: 0px 5px 2px 0px;
+}
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+}
