--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -9,10 +9,11 @@
     background: none;
   }
 }
+
 .nav-link {
   display: inline;
 
-  margin-right: 15px;
+  margin: 0px 5px;
   
   text-decoration: none;
   color: #f0f8ffb9;
@@ -31,4 +32,36 @@
   height: 46px;
   width: 46px;
   vertical-align: middle;
+}
+
+.nav {
+  display: block;
+
+  @media screen and (max-width: 576px) {
+    display: none;
+  }
+}
+
+.toggler-btn {
+
+  @media screen and (max-width: 576px) {
+    height: 25px;
+    padding: 0;
+    font-size: 14px;
+    line-height: 1;
+  }
+}
+
+.mobile-nav {
+  display: none;
+
+  padding-bottom: 10px;
+
+  font-size: 16px;
+  text-transform: uppercase;
+  text-align: center;
+
+  @media screen and (max-width: 576px) {
+    display: block;
+  }
 }
