--- a/src/app/features/store/modules/profile/pages/main/main.component.scss
+++ b/src/app/features/store/modules/profile/pages/main/main.component.scss
@@ -9,4 +9,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 90%;
+
+  @media screen and (min-width: 768px) {
+    width: 40%;
+  }
 }
